fix: fix chart visible (#781)

--- a/shell/app/yml-chart/chart/yml-chart.scss
+++ b/shell/app/yml-chart/chart/yml-chart.scss
@@ -17,13 +17,5 @@
 
   .svg-model-node-carrier {
     overflow: visible;
-
-    &.hidden {
-      visibility: hidden;
-    }
-
-    &.show {
-      visibility: visible;
-    }
   }
 }
